# dw-commodities

.devcontainer/: devcontainer.json
dw-commodities/: profiles.yml  pyproject.toml
dw-commodities/app/: app.py
dw-commodities/datawarehouse_sales/: dbt_project.yml
dw-commodities/datawarehouse_sales/models/: schema.yml
dw-commodities/datawarehouse_sales/models/staging/: schema.yml  stg_commodities.sql  stg_movimentacao_commodities.sql
dw-commodities/src/: extract_load.py
