[project]
name = "dw-commodities"
version = "0.1.0"
description = ""
authors = [
    {name = "Henriquepaisca",email = "carlospaisca@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "dw_commodities", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
